--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -9,3 +9,8 @@ $blanco : #FFF;
 //tipografia 
 $fuente_principal : 'Montserrat', sans-serif;
 
+//Media query
+$phone : 480px;
+$teblet : 768px;
+$desktop : 992px;
+$desktopXL : 1200px;
