--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -12,6 +12,7 @@ html{
 body{
     font-family: v.$fuente_principal;
     font-size: 1.6rem;
+    margin: 0;
 }
 p{
     font-size: 2rem;
@@ -26,7 +27,7 @@ a{
     text-decoration: none;
 }
 h1,h2,h3{
-    margin: 0 0 5rem 0;
+    margin: 0 0 3rem 0;
 }
 h1{
     font-size: 4rem;
