--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -11,6 +11,6 @@ $fuente_principal : 'Montserrat', sans-serif;
 
 //Media query
 $phone : 480px;
-$teblet : 768px;
+$tablet : 768px;
 $desktop : 992px;
-$desktopXL : 1200px;
+$desktopXL : 3200px;
