--- a/src/scss/layout/_festival.scss
+++ b/src/scss/layout/_festival.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     padding: 2rem 0;
     
-    @include m.mq(v.$teblet){
+    @include m.mq(v.$tablet){
         display: grid;
         grid-template-columns: repeat(2,1fr);
         column-gap: 2rem;
@@ -17,7 +17,7 @@
     img{
         width: 100%;
     }
-    @include m.mq(v.$teblet){
+    @include m.mq(v.$tablet){
         display: flex;
         align-items: center;
     }
