--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -12,6 +12,15 @@
         }
     }
 }
+@include m.mq(v.$tablet){
+    .barraFija{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        box-shadow: .1rem .2rem .3rem #333;
+    }
+}
 .navegacion-principal{
     padding: 2rem;
     a{
